[tool.poetry]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"
statsmodels = "^0.14.0"
yfinance = "^0.2.31"
jupyter = "^1.0.0"
mplfinance = "^0.12.10b0"
dash = "^2.14.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
pandas-vet = "^2023.8.2"
flake8-bugbear = "^23.9.16"
pydocstyle = "^6.3.0"
nbqa = "^1.7.0"
nbdev = "^2.3.13"
nb-clean = "^3.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
