[project]
name = "stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mplfinance>=0.12.10b0",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas[output-formatting]>=2.3.3",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.5",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "nb-clean>=4.0.1",
    "nbdev>=2.4.5",
    "nbqa>=1.9.1",
    "papermill>=2.6.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "RUF",
    "FURB",
    "W",
    "PERF",
    "N",
    "PD",
    "NPY",
    "FLY",
    "PTH",
    "ARG",
    "TC",
    "SLOT",
    "SIM",
    "SLF",
    "Q",
    "PT",
    "PYI",
    "ANN",
    "DOC",
    "D",
    "D212",
    "D402",
    "D415",
    "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poe]
    [tool.poe.tasks.test]
    help = "Test the codebase"
    sequence = [
        {cmd = "uv run pytest --doctest-modules"},
    ]

    [tool.poe.tasks.format]
    help = "Format the files"
    sequence = [
        {cmd = "uv run ruff format"},
    ]

    [tool.poe.tasks.lint]
    help = "Lint the files"
    sequence = [
        {cmd = "uv run ruff check --fix"},
    ]

    [tool.poe.tasks.check]
    help = "Check formatting & linting"
    sequence = [
        {cmd = "uv run ruff format --check"},
        {cmd = "uv run ruff check"},
    ]

    [tool.poe.tasks.nbcheck]
    help = "Check notebooks for unnecessary metadata & empty cells"
    cmd = "nb-clean check . --preserve-cell-outputs --remove-empty-cells"

    [tool.poe.tasks.nbclean]
    help = "Clean notebook metadatas & empty cells"
    sequence = [
        { cmd = "nbdev_clean --fname ." },
        { cmd = "nb-clean clean . --preserve-cell-outputs --remove-empty-cells"},
    ]


    [tool.poe.tasks.nbrun]
    help = "Run notebooks to see if they work"
    shell = """
    RED='\\033[0;31m'
    NC='\\033[0m' # No Color

    for input_file in $(find src docs/source -type f -name "*.ipynb"); do
      echo "${RED}Notebook: ${input_file}${NC}"
      papermill "$input_file" temp.ipynb
    done

    rm temp.ipynb
    """

    [tool.poe.tasks.nbqa]
    help = "Run all QA tools on notebooks"
    sequence = [
        { ref = "format" },
        { ref = "nbclean" },
        { ref = "nbcheck" },
        { ref = "nbrun" },
    ]
